[package]
name = "mp-crypto"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "crypto"
authors = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, default-features = true }
gmp-mpfr-sys = { version = "1.4.7" }